ErrorNest/server/logs/2023-12-06.exception.log
2023-12-06 16:01:01 [Error-Nest] error: uncaughtException: Route.get() requires a callback function but got a [object Object]
Error: Route.get() requires a callback function but got a [object Object]
    at Route.<computed> [as get] (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\node_modules\express\lib\router\route.js:211:15)
    at proto.<computed> [as get] (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\node_modules\express\lib\router\index.jsx:521:19)
    at Object.<anonymous> (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\routes\report.js:7:8)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:121:18)
    at Object.<anonymous> (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\server.js:8:16)
2023-12-06 16:01:21 [Error-Nest] error: uncaughtException: Unexpected end of input
D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\controller\reportController.js:24
module.exports = {reportCRUD};
                              

SyntaxError: Unexpected end of input
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:121:18)
    at Object.<anonymous> (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\routes\report.js:2:26)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
2023-12-06 16:01:24 [Error-Nest] error: uncaughtException: Unexpected end of input
D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\controller\reportController.js:24
module.exports = {documentSelect};
                                  

SyntaxError: Unexpected end of input
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:121:18)
    at Object.<anonymous> (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\routes\report.js:2:26)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
2023-12-06 16:01:46 [Error-Nest] error: uncaughtException: Route.get() requires a callback function but got a [object Object]
Error: Route.get() requires a callback function but got a [object Object]
    at Route.<computed> [as get] (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\node_modules\express\lib\router\route.js:211:15)
    at proto.<computed> [as get] (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\node_modules\express\lib\router\index.jsx:521:19)
    at Object.<anonymous> (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\routes\report.js:6:8)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:121:18)
    at Object.<anonymous> (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\server.js:8:16)
2023-12-06 16:09:11 [Error-Nest] error: uncaughtException: Cannot read properties of undefined (reading 'length')
TypeError: Cannot read properties of undefined (reading 'length')
    at pathtoRegexp (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\node_modules\path-to-regexp\index.jsx:63:49)
    at new Layer (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\node_modules\express\lib\router\layer.js:45:17)
    at Function.route (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\node_modules\express\lib\router\index.jsx:505:15)
    at proto.<computed> [as post] (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\node_modules\express\lib\router\index.jsx:520:22)
    at Object.<anonymous> (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\routes\report.js:7:8)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
2023-12-06 17:11:49 [Error-Nest] error: uncaughtException: Unexpected token ')'
D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\db\schema\report.js:37
}, { versionKey: false, _id: { auto: true });
                                           ^

SyntaxError: Unexpected token ')'
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:121:18)
    at Object.<anonymous> (D:\1_ByeongJun Sturctures\Programming Language\web\error-nest\ErrorNest\server\controller\reportController.js:1:16)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
